RMark 2.2.0 (25 Jan 2016)

NEW FEATURES

* I added the long requested feature that enables modification of design data as well as individual
covariate values for real parameter estimates.  See ?predict_real.  Any help testing this function would
be much appreciated.  


CHANGES 
* Modified mark.wrapper.parallel to use parallel instead of snow/snowfall to avoid dependency

BUG FIXES

* PIM structure for RDMSOccRepro was not correctly constructed in the MARK inp file when there was more than one group. Thanks to Jim Hines for noticing and reporting this problem.

RMark 2.1.14 (14 Dec 2015)

NEW FEATURES

* Added Burnham live-dead model example provided by Luke Eberhart-Phillips (?Burnham)

* Added example of MS fish route data and code provided by Megan Moore (?skagit).

* Added Huggins model with random effects (#145), RD version (#146), RD2SpGEConOcc (#141) and relaxed Occupancy model (#144)

* Added UnId versions of mark-resight models (#158,#159,#160); added derived parameter for PoissonMR model

BUG FIXES

* patch to var.components.reml for test of intercept in random design (rdesign); thanks to Wolfgang Viechtbauer

* patched get.real to handle situations in which beta and design.matrix is specified; se or vcv set to TRUE is not allowed if beta is specified; thanks to Jeff Hostetler for reporting this issue.

* patched compute.real to properly handle fixed values in mlogit parameters.  This code was added in June 2014 version but apparently did not work with more than 9 strata and possibly other situations. Thanks to Tyson Wepprich who discovered error and patched code.

RMark 2.1.13 (3 June 2015)
--------------------------
CHANGES

* Thanks to Ben Cox who profiled the code which helped me make a change that significantly speeds up writing of input files with large data. As part of that changed I added an argument wrap which defaults to TRUE. If you have large data sets where each record is less than 255 characters set wrap=FALSE.
